#Copyright (c) Microsoft. All rights reserved.
#Licensed under the MIT license. See LICENSE file in the project root for full license information.

cmake_minimum_required(VERSION 3.2.0)

add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/ustream_basic)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/ustream_header)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/ustream_message)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/ustream_message_clone)
